package snaked.model;

public enum BoardCell {
    CONSUMABLE,
    SNAKE_HEAD,
    SNAKE_BODYPART;
}