package snaked.model;

public enum Direction {
    UP,
    DOWN,
    LEFT,
    RIGHT
}
